--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #eee;
+  width:100vw;
+  height:100vh;
+}
+
+main {
+  background-color: #fff;
+  min-width: 390px;
+  max-width: 425px;
+  height: 100%;
+  margin:auto;
+  background-color: #fff;
+}
