--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 body {
   background-color: #eee;
-  width:100vw;
-  height:100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 main {
@@ -13,6 +13,15 @@ main {
   min-width: 390px;
   max-width: 425px;
   height: 100%;
-  margin:auto;
+  margin: auto;
   background-color: #fff;
+}
+
+.formInput {
+  width: 100%;
+  border-bottom: 1px solid #000;
+}
+
+.formInput:focus-visible {
+  outline: none;
 }
