Design: SpeechBubble 기본 디자인 세팅

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,19 @@ main {
 .formInput:focus-visible {
   outline: none;
 }
+
+.chatBubble {
+  width: fit-content;
+  padding: 20px;
+  background-color: #eee;
+  border-radius: 0 20px 20px 20px;
+}
+
+.userBubble {
+  width: fit-content;
+  padding: 20px;
+  background-color: #000;
+  color: white;
+  align-self: flex-end;
+  border-radius: 20px 0 20px 20px;
+}
