--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ main {
   height: 100%;
   margin: auto;
   background-color: #fff;
+  overflow-y: scroll;
 }
 
 .formInput {
@@ -28,14 +29,14 @@ main {
 
 .chatBubble {
   width: fit-content;
-  padding: 20px;
+  padding: 10px 20px 10px 20px;
   background-color: #eee;
   border-radius: 0 20px 20px 20px;
 }
 
 .userBubble {
   width: fit-content;
-  padding: 20px;
+  padding: 10px 20px 10px 20px;
   background-color: #000;
   color: white;
   align-self: flex-end;
