--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,13 @@ main {
 .formInput:focus-visible {
   outline: none;
 }
+
+.card{
+  display: flex;
+  flex-direction: column;
+  margin:1rem auto;
+  height: 12rem;
+  width: 80%;
+  border-radius: 0.75rem;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
