--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,28 @@ main {
   align-self: flex-end;
   border-radius: 20px 0 20px 20px;
 }
+
+.bubble {
+  position: absolute;
+  top: -60px;
+  left: 20px;
+  width: 140px;
+  border-radius: 40px;
+  text-align: center;
+  background-color: black;
+  padding: 4px 0;
+  font-size: 14px;
+  color: white;
+}
+
+.bubble::after {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  content: "";
+  width: 0;
+  height: 0;
+  border-top: 12px solid black;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+}
