--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ main {
   outline: none;
 }
 
-.card{
+.card {
   display: flex;
   flex-direction: column;
   margin:1rem auto;
@@ -41,4 +41,16 @@ main {
   width: 80%;
   border-radius: 0.75rem;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.fixedButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 425px;
+  height: 50px;
+  position: fixed;
+  bottom: 50px;
+  background-color: #000;
+  color: #fff;
 }
