--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
   background-color: #eee;
   width: 100vw;
   height: 100vh;
+  letter-spacing: -0.6px;
 }
 
 main {
@@ -33,10 +34,10 @@ main {
   outline: none;
 }
 
-.card{
+.card {
   display: flex;
   flex-direction: column;
-  margin:1rem auto;
+  margin: 1rem auto;
   height: 12rem;
   width: 80%;
   border-radius: 0.75rem;
