--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -6,7 +6,9 @@
   margin-top: 30px;
   margin-left: 20px;
 }
-
+.ant-carousel .slick-dots{
+  position: static !important;
+}
 .ant-carousel .slick-dots-top{
   margin-left:300px;
 }
@@ -20,5 +22,4 @@
   width: 6px;
   height: 6px;
   border-radius: 50%;
-
 }
