--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
   .form_input {
     @apply w-[358px] rounded-sm border-1 px-3 py-2 pr-[70px] focus-visible:outline-none;
   }
-  .form_input {
+  .form_input::placeholder {
     @apply text-placeholder;
   }
   .input_small {
