--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,15 +30,23 @@
   .search_input {
     @apply w-[358px] rounded-sm border-1 px-3 py-2 pl-[50px];
   }
+
   .form_input {
-    @apply w-[358px] rounded-sm border-1 px-3 py-2 pr-[70px] focus-visible:outline-none;
+    @apply w-[358px] rounded-sm border-background-secondary border-1 px-3 py-2 pr-[70px];
   }
+
+  .form_input:focus-visible {
+    @apply outline-none
+  }
+
   .form_input::placeholder {
     @apply text-placeholder;
   }
+
   .input_small {
     @apply w-[240px] px-3 py-2;
   }
+
   .input_small::placeholder {
     @apply text-placeholder;
   }
@@ -65,6 +73,7 @@
   .chip {
     @apply rounded-sm border-1 border-primary-normal px-4 py-2 font-bold text-primary-normal;
   }
+
   .chip_selected {
     @apply !bg-primary-normal !text-white;
   }
@@ -80,6 +89,7 @@
   .button_cancel {
     @apply border-1 !bg-white !text-primary-normal;
   }
+
   .inactive {
     @apply !border-button-inactive !text-placeholder;
   }
