--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@
     background-color: #eee;
     width: 100vw;
     height: 100vh;
-    letter-spacing: -0.8px;
+    letter-spacing: -0.6px;
+    color: #242424;
   }
 
   main {
@@ -33,6 +34,9 @@
   .form_input {
     @apply w-[358px] rounded-sm border-1 px-3 py-2 pr-[70px] focus-visible:outline-none;
   }
+  .form_input:focus-visible {
+    @apply outline-none;
+  }
   .form_input::placeholder {
     @apply text-placeholder;
   }
@@ -54,38 +58,41 @@
   }
 
   .user_bubble {
-    @apply w-fit self-end bg-primary-light px-6 py-3 font-bold text-white shadow-md;
+    @apply w-fit self-end bg-primary-light px-6 py-3 text-sm text-white shadow-md;
     border-radius: 20px 4px 20px 20px;
   }
 
   .option {
-    @apply w-fit border-1 bg-white px-6 py-3 font-bold text-primary-normal shadow-md;
+    @apply w-fit rounded-xl border-1 bg-white px-6 py-3 text-sm font-bold -tracking-[0.8px] text-primary-normal;
   }
 
   .chip {
     @apply rounded-sm border-1 border-primary-normal px-4 py-2 font-bold text-primary-normal;
   }
-  .chip_selected {
+  .selected {
     @apply !bg-primary-normal !text-white;
   }
 
   .button {
-    @apply w-full min-w-[358px] bg-primary-normal text-white;
+    @apply h-[56px] w-full min-w-[358px] rounded-md bg-primary-normal text-white;
   }
 
   .button_small {
     @apply h-[56px] w-[110px] rounded-sm border-1 border-primary-normal bg-white font-bold;
   }
 
+  .info_card {
+    @apply w-full rounded-xl border-1 border-primary-normal p-4;
+  }
   .button_cancel {
     @apply border-1 !bg-white !text-primary-normal;
   }
   .inactive {
-    @apply !border-button-inactive !text-placeholder;
+    @apply border-1 !border-button-inactive !bg-white !text-gray-normal;
   }
 
   .button_fixed {
-    @apply max-w[425px] fixed bottom-[58px] flex h-[80px] w-full min-w-[390px] items-center justify-center rounded-t-lg text-2xl font-bold;
+    @apply fixed bottom-[58px] left-1/2 flex h-[80px] w-full min-w-[390px] max-w-[425px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
   }
 
   .modal_background {
@@ -93,7 +100,7 @@
   }
 
   .modal {
-    @apply rounded-t-md bg-white px-4 py-5;
+    @apply fixed bottom-[58px] left-1/2 w-full min-w-[390px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
   }
 
   .card {
