--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
   }
 
   .form_input {
-    @apply w-[358px] rounded-sm border-background-secondary border-1 px-3 py-2 pr-[70px];
+    @apply w-[358px] rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
   }
 
   .form_input:focus-visible {
