Design: 인증확인 페이지에서 사용하는 form의 class 제작

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,10 @@
     @apply text-placeholder;
   }
 
+  .input_authentication {
+    @apply w-full min-w-[302px] rounded-sm border-1 border-background-secondary px-3 py-2;
+  }
+
   .entering {
     @apply !border-primary-normal;
   }
