Design: 확정된 디자인에 맞춰 스타일링 작업

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,12 @@
   .popup h3 {
     @apply text-center text-xl font-bold;
   }
+  .popup .popup-button {
+    @apply rounded-sm bg-primary-normal  text-white;
+  }
+  .popup .cancel-button {
+    @apply w-1/2 rounded-sm border-1 border-black py-3;
+  }
 }
 
 .fixedButton {
