Design: 디자인 추가 및 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@
   }
 
   .card {
-    @apply mx-auto my-4 flex w-[80%] flex-col rounded-md shadow-md;
+    @apply mx-auto my-4 flex w-full flex-col rounded-md shadow-md;
   }
 
   .popup {
