--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,10 @@
   .popup h3 {
     @apply text-bold text-center text-xl;
   }
+
+  .propensity_circle {
+    @apply absolute top-1/2 h-[10px] w-[10px] -translate-x-1/2 -translate-y-1/2 rounded-[5px] bg-primary-normal;
+  }
 }
 
 .fixedButton {
