--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,7 +99,7 @@
   }
 
   .button_fixed {
-    @apply fixed bottom-[58px] left-1/2 flex h-[80px] w-full min-w-[390px] max-w-[425px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
+    @apply fixed bottom-[75px] left-1/2 flex h-20 w-full min-w-[390px] max-w-[425px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
   }
 
   .modal_background {
@@ -127,17 +127,4 @@
   .popup .cancel-button {
     @apply w-1/2 rounded-sm border-1 border-black py-3;
   }
-}
-
-.fixedButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 425px;
-  height: 50px;
-  position: fixed;
-  bottom: 50px;
-  background-color: #000;
-  color: #fff;
-  z-index: 10;
 }
