--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,7 @@
   }
 
   .form_input {
-    @apply min-w-[358px] w-full rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
+    @apply w-full min-w-[358px] rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
   }
 
   .form_input:focus-visible {
@@ -83,9 +83,12 @@
   }
 
   .button {
-    @apply h-[56px] w-full min-w-[358px] rounded-md bg-primary-normal text-white;
+    @apply flex h-[56px] w-full min-w-[358px] items-center justify-center rounded-md bg-primary-normal font-bold text-white;
   }
 
+  .button_outlined {
+    @apply flex h-[56px] w-full min-w-[358px] items-center justify-center rounded-md border-1 border-primary-normal font-bold text-primary-normal;
+  }
   .button_small {
     @apply h-[56px] w-[110px] rounded-sm border-1 border-primary-normal bg-white font-bold;
   }
