--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,10 +129,10 @@
     @apply text-center text-xl font-bold;
   }
   .popup .popup-button {
-    @apply rounded-sm bg-primary-normal  text-white;
+    @apply h-[44px] rounded-[8px] bg-primary-normal  text-white;
   }
   .popup .cancel-button {
-    @apply w-1/2 rounded-sm border-1 border-black py-3;
+    @apply w-1/2   rounded-[8px] border-1 border-black py-3;
   }
 
   .propensity_circle {
