--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,10 +137,10 @@
     @apply w-1/2 rounded-sm border-1 border-black py-3;
   }
   .pb_top_Phrase {
-    @apply mb-6 mt-4 h-8 w-full bg-primary-normal p-2 text-center text-xs;
+    @apply mb-6 mt-4 w-full bg-primary-normal px-4 py-2 text-center text-xs;
   }
   .user_top_Phrase {
-    @apply mb-6 mt-4 h-8 w-full bg-secondary-heavy p-2 text-center text-xs;
+    @apply mb-6 mt-4 w-full bg-primary-normal px-4 py-2 text-center text-xs;
   }
 
   .propensity_circle {
