--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,19 +6,20 @@
   body {
     background-color: #eee;
     width: 100vw;
-    height: 100vh;
     letter-spacing: -0.6px;
     color: #242424;
   }
 
   main {
-    background-color: #fff;
+    background-color: #f8f8f8;
     min-width: 390px;
     max-width: 425px;
     width: 100%;
     height: 100%;
     margin: auto;
     padding: 0 16px;
+    padding-top: 70px;
+    padding-bottom: 100px;
     overflow-y: scroll;
   }
 
