--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,6 +89,7 @@
   .button_outlined {
     @apply flex h-[56px] w-full min-w-[358px] items-center justify-center rounded-md border-1 border-primary-normal font-bold text-primary-normal;
   }
+
   .button_small {
     @apply h-[56px] w-[110px] rounded-sm border-1 border-primary-normal bg-white font-bold;
   }
@@ -136,9 +137,11 @@
   .popup .cancel-button {
     @apply w-1/2 rounded-sm border-1 border-black py-3;
   }
+
   .pb_top_Phrase {
     @apply mb-6 mt-4 h-8 w-full bg-primary-normal p-2 text-center text-xs;
   }
+
   .user_top_Phrase {
     @apply mb-6 mt-4 h-8 w-full bg-secondary-heavy p-2 text-center text-xs;
   }
@@ -149,6 +152,14 @@
 
   .propensity_circle {
     @apply absolute top-1/2 h-[10px] w-[10px] -translate-x-1/2 -translate-y-1/2 rounded-[5px] bg-primary-normal;
+  }
+
+  .input_button {
+    @apply absolute right-10 w-4 h-4 bg-[url('/assets/images/clear.svg')]
+  }
+
+  .input_status {
+    @apply absolute right-3
   }
 }
 
