--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   body {
     background-color: #eee;
     width: 100vw;
+    height: auto;
     letter-spacing: -0.6px;
     color: #242424;
   }
@@ -15,7 +16,7 @@
     min-width: 390px;
     max-width: 425px;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     margin: auto;
     padding: 0 16px;
     padding-top: 70px;
