--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,7 @@
   }
 
   .modal {
-    @apply fixed bottom-[58px] left-1/2 w-full min-w-[390px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
+    @apply fixed bottom-[80px] left-1/2 w-full min-w-[390px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
   }
 
   .card {
@@ -156,10 +156,21 @@
   }
 
   .input_button {
-    @apply absolute right-10 w-4 h-4 bg-[url('/assets/images/clear.svg')]
+    @apply absolute right-10 h-4 w-4 bg-[url('/assets/images/clear.svg')];
   }
 
   .input_status {
-    @apply absolute right-3
+    @apply absolute right-3;
+  }
+
+  .edit_input {
+    @apply block w-full rounded-sm border-1 border-button-inactive bg-white p-4 text-gray-heavy;
+  }
+  .edit_input:focus-visible {
+    @apply outline-none;
+  }
+
+  .edit_input::placeholder {
+    @apply text-placeholder;
   }
 }
