--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 @layer utilities {
   body {
     background-color: #f8f8f8;
-    width: 100vw;
     height: auto;
     letter-spacing: -0.6px;
     color: #242424;
@@ -67,7 +66,7 @@
   }
 
   .user_bubble {
-    @apply w-fit self-end bg-primary-light px-6 py-3 text-sm text-white shadow-md;
+    @apply self-end px-6 py-3 text-sm text-white shadow-md w-fit bg-primary-light;
     border-radius: 20px 4px 20px 20px;
   }
 
@@ -76,7 +75,7 @@
   }
 
   .chip {
-    @apply rounded-sm border-1 border-primary-normal px-4 py-2 font-bold text-primary-normal;
+    @apply px-4 py-2 font-bold rounded-sm border-1 border-primary-normal text-primary-normal;
   }
 
   .selected {
@@ -96,7 +95,7 @@
   }
 
   .info_card {
-    @apply w-full rounded-xl border-1 border-primary-normal p-4;
+    @apply w-full p-4 rounded-xl border-1 border-primary-normal;
   }
 
   .button_cancel {
@@ -112,7 +111,7 @@
   }
 
   .modal_background {
-    @apply fixed left-0 top-0 h-full w-full bg-black opacity-40;
+    @apply fixed top-0 left-0 w-full h-full bg-black opacity-40;
   }
 
   .modal {
@@ -120,7 +119,7 @@
   }
 
   .card {
-    @apply mx-auto my-4 flex w-full flex-col rounded-md shadow-md;
+    @apply flex flex-col w-full mx-auto my-2 rounded-md shadow-md;
   }
 
   .popup {
@@ -128,7 +127,7 @@
   }
 
   .popup h3 {
-    @apply text-center text-xl font-bold;
+    @apply text-xl font-bold text-center;
   }
 
   .popup .popup-button {
@@ -136,15 +135,15 @@
   }
 
   .popup .cancel-button {
-    @apply w-1/2 rounded-md border-1 border-black py-3;
+    @apply w-1/2 py-3 border-black rounded-md border-1;
   }
 
   .pb_top_Phrase {
-    @apply mb-6 mt-4 w-full bg-primary-normal px-4 py-2 text-center text-xs;
+    @apply w-full px-4 py-2 mt-4 mb-6 text-xs text-center bg-primary-normal;
   }
 
   .user_top_Phrase {
-    @apply mb-6 mt-4 w-full bg-secondary-heavy px-4 py-2 text-center text-xs;
+    @apply w-full px-4 py-2 mt-4 mb-6 text-xs text-center bg-secondary-heavy;
   }
 
   .propensity_circle {
@@ -156,10 +155,10 @@
   }
 
   .input_button {
-    @apply absolute right-10 w-4 h-4 bg-[url('/assets/images/clear.svg')]
+    @apply absolute right-10 h-4 w-4 bg-[url('/assets/images/clear.svg')];
   }
 
   .input_status {
-    @apply absolute right-3
+    @apply absolute right-3;
   }
 }
