Design: 캘린더 UI 반응형 적용

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -1,6 +1,4 @@
 .ant-picker-calendar {
-  width: 358px;
-  margin: 24px;
   padding: 20px 16px 10px;
   border-radius: 30px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 10px 12px rgba(0, 0, 0, 0.1);
@@ -80,11 +78,8 @@
 }
 .ant-picker-cell-today {
   .ant-picker-calendar-date-value {
-    color: #fff !important;
-    height: 24px;
-    width: 24px;
-    background-color: black;
-    border-radius: 100%;
+    color: red !important;
+    font-weight: 800;
   }
 }
 .ant-picker-cell-selected {
