--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -169,4 +169,10 @@
   .scroll_hidden::-webkit-scrollbar {
     display: none;
   }
+
+  .custom-gradient {
+  background-image: linear-gradient(to bottom, transparent, black);
+  z-index: 10;
 }
+}
+
