Design: button_fixed max-width 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@
   }
 
   .button_fixed {
-    @apply fixed bottom-[70px] left-1/2 flex h-20 w-full min-w-[390px] max-w-[425px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
+    @apply fixed bottom-[70px] left-1/2 w-full flex h-20 min-w-[390px] max-w-[768px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
   }
 
   .modal_background {
