Fix: ant design 커스터마이징 누락되는 경우 수정

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .ant-picker-calendar {
   padding: 20px 16px 10px;
   border-radius: 30px;
