--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,11 +30,11 @@
 
 @layer components {
   .search_input {
-    @apply w-[358px] rounded-sm border-1 px-3 py-2 pl-[50px];
+    @apply w-[343px] rounded-sm border-1 px-3 py-2 pl-[50px];
   }
 
   .form_input {
-    @apply w-full min-w-[358px] rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
+    @apply w-full min-w-[343px] rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
   }
 
   .form_input:focus-visible {
@@ -87,11 +87,11 @@
   }
 
   .button {
-    @apply flex h-[56px] w-full min-w-[358px] items-center justify-center rounded-md bg-primary-normal font-bold text-white;
+    @apply flex h-[56px] w-full min-w-[343px] items-center justify-center rounded-md bg-primary-normal font-bold text-white;
   }
 
   .button_outlined {
-    @apply flex h-[56px] w-full min-w-[358px] items-center justify-center rounded-md border-1 border-primary-normal font-bold text-primary-normal;
+    @apply flex h-[56px] w-full min-w-[343px] items-center justify-center rounded-md border-1 border-primary-normal font-bold text-primary-normal;
   }
 
   .button_small {
@@ -119,7 +119,7 @@
   }
 
   .modal {
-    @apply fixed bottom-[70px] left-1/2 w-full min-w-[375px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
+    @apply fixed bottom-0 left-1/2 w-full min-w-[375px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
   }
 
   .card {
@@ -135,11 +135,11 @@
   }
 
   .popup .popup-button {
-    @apply rounded-md bg-primary-normal text-white;
+    @apply h-[44px] rounded-md bg-primary-normal text-white;
   }
 
   .popup .cancel-button {
-    @apply w-1/2 rounded-md border-1 border-black py-3;
+    @apply h-[44px] w-1/2 rounded-md border-1 border-black;
   }
 
   .pb_top_Phrase {
