--- a/src/styles/companyCarousel.css
+++ b/src/styles/companyCarousel.css
@@ -1,27 +1,44 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.slick-dots.slick-dots-bottom {
-  bottom: -20px;
-}
 .ant-carousel .slick-dots li {
-  width: 6px;
-  height: 6px;
+  width: 6px !important;
+  height: 6px !important;
 }
 
 .ant-carousel .slick-dots li button {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: #d9d9d9;
+  width: 100% !important;
+  height: 100% !important;
+  border-radius: 50% !important;
 }
 
 .ant-carousel .slick-dots li.slick-active {
-  width: 6px;
-  height: 6px;
+  width: 6px !important;
+  height: 6px !important;
 }
 
-.ant-carousel .slick-dots li.slick-active button {
-  background: #242424;
+@media screen and (max-width: 767px) {
+  .ant-carousel .slick-prev,
+  .ant-carousel .slick-next,
+  .ant-carousel .slick-prev:hover,
+  .ant-carousel .slick-next:hover {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .ant-carousel .slick-prev,
+  .ant-carousel .slick-next,
+  .ant-carousel .slick-prev:hover,
+  .ant-carousel .slick-next:hover {
+    width: 30px !important;
+    height: 30px !important;
+    color: #242424 !important;
+    margin-top: -28px !important;
+    z-index: 1 !important;
+  }
+}
+.ant-carousel .slick-prev {
+  inset-inline-start: -8px !important;
+}
+
+.ant-carousel .slick-next {
+  inset-inline-end: -8px !important;
 }
