--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -99,6 +99,8 @@
 
 .ant-picker-calendar-month-select {
   width: 80px !important;
+  display: flex;
+  justify-content: center;
 }
 
 .ant-picker-calendar-date-value {
